Ana sayfadaki listeleme işlemleri bitti. Model kısmında düzenleme işlemleri yaptım. partiallar içine veriler çekildi

--- a/Janson/Janson.csproj
+++ b/Janson/Janson.csproj
@@ -132,6 +132,9 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\Entity\AboutpartTbl.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\Entity\AboutTBL.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
@@ -141,7 +144,13 @@
     <Compile Include="Models\Entity\ExperienceTBL.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\Entity\HobilerTBL.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\Entity\MainTBL.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\Entity\MessageTbl.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\Entity\Model1.Context.cs">
