--- a/Janson/Janson.csproj
+++ b/Janson/Janson.csproj
@@ -163,6 +163,8 @@
     <Compile Include="Controllers\AdminAboutController.cs" />
     <Compile Include="Controllers\AdminAboutPController.cs" />
     <Compile Include="Controllers\AdminController.cs" />
+    <Compile Include="Controllers\AdminGaleryController.cs" />
+    <Compile Include="Controllers\AdminHobiesController.cs" />
     <Compile Include="Controllers\ContactController.cs" />
     <Compile Include="Controllers\MainController.cs" />
     <Compile Include="Controllers\ProtfolioController.cs" />
@@ -5773,6 +5775,12 @@
     <Content Include="Views\AdminAboutP\InsertAboutPPage.cshtml" />
     <Content Include="Views\AdminAboutP\UpdateAboutPPage.cshtml" />
     <Content Include="Views\AdminAboutP\AdminAboutPPartial.cshtml" />
+    <Content Include="Views\AdminHobies\Index.cshtml" />
+    <Content Include="Views\AdminHobies\UpdateHobiesPage.cshtml" />
+    <Content Include="Views\AdminHobies\InsertHobiesPage.cshtml" />
+    <Content Include="Views\AdminGalery\Index.cshtml" />
+    <Content Include="Views\AdminGalery\InsertGaleryPage.cshtml" />
+    <Content Include="Views\AdminGalery\UpdateGaleryPage.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
