--- a/Janson/Janson.csproj
+++ b/Janson/Janson.csproj
@@ -163,8 +163,10 @@
     <Compile Include="Controllers\AdminAboutController.cs" />
     <Compile Include="Controllers\AdminAboutPController.cs" />
     <Compile Include="Controllers\AdminController.cs" />
+    <Compile Include="Controllers\AdminExperienceController.cs" />
     <Compile Include="Controllers\AdminGaleryController.cs" />
     <Compile Include="Controllers\AdminHobiesController.cs" />
+    <Compile Include="Controllers\AdminSettingsController.cs" />
     <Compile Include="Controllers\ContactController.cs" />
     <Compile Include="Controllers\MainController.cs" />
     <Compile Include="Controllers\ProtfolioController.cs" />
@@ -5781,6 +5783,12 @@
     <Content Include="Views\AdminGalery\Index.cshtml" />
     <Content Include="Views\AdminGalery\InsertGaleryPage.cshtml" />
     <Content Include="Views\AdminGalery\UpdateGaleryPage.cshtml" />
+    <Content Include="Views\AdminExperience\Index.cshtml" />
+    <Content Include="Views\AdminExperience\InsertExperiencePage.cshtml" />
+    <Content Include="Views\AdminExperience\UpdateExperiencePage.cshtml" />
+    <Content Include="Views\AdminSettings\Index.cshtml" />
+    <Content Include="Views\AdminSettings\InsertSettingPage.cshtml" />
+    <Content Include="Views\AdminSettings\UpdateSettingPage.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
