Blog sayfası ve blog detail sayfasi ile ilgili her şey bitti diyebilirim. Sadecec Search işlemi kaldı. Admin tarafında da kodlarsam sayfam şu anlık istediğim gibi olacak.

--- a/Janson/Janson.csproj
+++ b/Janson/Janson.csproj
@@ -5805,6 +5805,10 @@
     <Content Include="Views\BlogDetails\Index.cshtml" />
     <Content Include="Views\Blog\TagPartial.cshtml" />
     <Content Include="Views\Blog\CategoryPartial.cshtml" />
+    <Content Include="Views\BlogDetails\NextPostPartial.cshtml" />
+    <Content Include="Views\BlogDetails\CreatorPartial.cshtml" />
+    <Content Include="Views\BlogDetails\BlogCommentsPartial.cshtml" />
+    <Content Include="Views\BlogDetails\CreateBlogComment.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
