--- a/Janson/Web.config
+++ b/Janson/Web.config
@@ -14,6 +14,26 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
+
+  <system.web>
+   
+
+
+    <customErrors mode="On" defaultRedirect="/Error/NotFound/">
+      <error statusCode="404" redirect="/Error/NotFound/" />
+    </customErrors>
+
+
+  </system.web>
+
+  <system.webServer>
+    <httpErrors errorMode="Custom">
+      <remove statusCode="404" subStatusCode="-1" />
+      <error statusCode="404" path="/Error/NotFound/" responseMode="ExecuteURL" />
+    </httpErrors>
+  </system.webServer>
+  
+  
   <system.web>
     <compilation debug="true" targetFramework="4.8.1" />
     <httpRuntime targetFramework="4.8.1" />
